Supported notification flow when unable to update
